--- a/module-2/index.html
+++ b/module-2/index.html
@@ -2,10 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
     <title>First Assignment</title>
+    <link rel="stylesheet" href="css/index.css">
+    
 </head>
 <body>
-    <h1>Hello Janta!</h1>
+    <h1>Our Menu</h1>
+
+    <div class="row">
+
+        <div class="col-lg-4 col-md-6 col-sm-12" id="box">
+            <div class="topic" id="p1">Chicken</div> 
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12" id="box">
+            <div class="topic" id="p2">Beef</div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+
+        <div class="col-lg-4 col-md-12 col-sm-12" id="box">
+            <div class="topic" id="p3">Sushi</div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div> 
+
+    </div>
+
 </body>
 </html>
