--- a/module-2/index.html
+++ b/module-2/index.html
@@ -12,23 +12,29 @@
 
     <div class="row">
 
-        <div class="col-lg-4 col-md-6 col-sm-12" id="box">
+    <div class="col-lg-4 col-md-6 col-sm-12" id="container">
+        <div class="col-lg-12 col-md-12 col-sm-12" id="box">
             <div class="dummy"></div>
             <div class="topic" id="p1">Panipuri</div> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
+    </div>
 
-        <div class="col-lg-4 col-md-6 col-sm-12" id="box">
+    <div class="col-lg-4 col-md-6 col-sm-12" id="container">
+        <div class="col-lg-12 col-md-12 col-sm-12" id="box">
             <div class="dummy"></div>
             <div class="topic" id="p2">Vadapav</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
+    </div>
 
-        <div class="col-lg-4 col-md-12 col-sm-12" id="box">
+    <div class="col-lg-4 col-md-12 col-sm-12" id="container">
+        <div class="col-lg-12 col-md-12 col-sm-12" id="box">
             <div class="dummy"></div>
             <div class="topic" id="p3">Samosa</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div> 
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+    </div> 
 
     </div>
 
