--- a/module-3/index.html
+++ b/module-3/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Second Assignment</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
@@ -19,22 +20,30 @@
                         <a href="index.html"><h1>Food, LLC</h1></a>
                     </div>
 
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                    <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button>
+                      </button>
 
                 </div> <!--end navbar-header-->
 
-                <div id="collapsable-nav" class="collapse navbar-collapse" >
-                    <ul class="nav navbar-nav">
-                        <li class="text-center"><a href="#">Panipuri <span class="sr-only">Home</span></a></li>
-                        <li class="text-center"><a href="index.html">Samosa</a></li>
-                        <li class="text-center"><a href="index.html">Vadapav</a></li>
-                    </ul>
-                </div>
+                <div id="collapsable-nav" class="collapse navbar-collapse ">
+                    <ul id="nav-list" class="nav navbar-nav navbar-right ">
+                     <li>
+                       <a href="index.html">Panipuri</a>
+                       <hr class="separator visible-xs">
+                     </li>
+                     <li>
+                       <a href="index.html">Vadapav</a>
+                       <hr class="separator visible-xs">
+                     </li>
+                     <li>
+                       <a href="index.html">Samosa</a>
+                     </li>
+                   </ul><!-- #nav-list -->
+                 </div><!-- .collapse .navbar-collapse -->
 
             </div> <!--end container -->
         </nav>
@@ -72,6 +81,8 @@
 
     <!-- End Main Content-->
 
+    <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
