--- a/module-3/index.html
+++ b/module-3/index.html
@@ -20,17 +20,17 @@
                         <a href="index.html"><h1>Food, LLC</h1></a>
                     </div>
 
-                    <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                    <button type="button" class="navbar-toggle collapsed hidden-sm hidden-md hidden-lg " data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                      </button>
+                    </button>
 
                 </div> <!--end navbar-header-->
 
-                <div id="collapsable-nav" class="collapse navbar-collapse ">
-                    <ul id="nav-list" class="nav navbar-nav navbar-right ">
+                <div id="collapsable-nav" class="collapse navbar-collapse hidden-sm hidden-md hidden-lg ">
+                    <ul id="nav-list" class="nav navbar-nav navbar-right hidden-sm hidden-md hidden-lg ">
                      <li>
                        <a href="index.html">Panipuri</a>
                        <hr class="separator visible-xs">
